@@ -293,8 +293,12 @@ gtk_action_group_add_actions (GtkActionGroup      *action_group,
 			      guint                n_entries)
 {
   guint i;
+  GtkTranslateFunc translate_func;
+  gpointer translate_data;
+
   g_return_if_fail (GTK_IS_ACTION_GROUP (action_group));
-  GtkTranslateFunc translate_func = action_group->private_data->translate_func;
+
+  translate_func = action_group->private_data->translate_func;
   gpointer translate_data = action_group->private_data->translate_data;
 
   for (i = 0; i < n_entries; i++)
